@@ -1,3 +1,11 @@
+Mon Jun 30 02:59:08 2014  Shugo Maeda  <shugo@ruby-lang.org>
+
+	* lib/net/imap.rb (body_type_1part): Gmail IMAP reports a body
+	  type as "MIXED" followed immediately by params
+	  [ruby-core:62864] [Bug #9885]
+	  Patch by @rayners (David Raynes). [Fixes GH-622] 
+	  https://github.com/ruby/ruby/pull/622
+
 Mon Jun 30 02:46:44 2014  Rei Odaira  <Rei.Odaira@gmail.com>
 
 	* signal.c (ruby_signal): should return either `old.sa_sigaction`
